@@ -1361,41 +1361,41 @@ al2 contains nfabs: 1
 csa al3
 al3 contains nfabs: 1
 trivial algebra over a quadratic field
-[[x, [1, -x], [1, 1], 1, [], [], [[1], [1]], Mat(1), 1, [y^2 + 1, [0, 1], -4
-, 1, [Mat([1, 0.E-57 + 1.0000000000000000000000000000000000000*I]), [1, 1.00
-00000000000000000000000000000000000; 1, -1.000000000000000000000000000000000
-0000], [1, 1; 1, -1], [2, 0; 0, -2], [2, 0; 0, 2], [1, 0; 0, -1], [1, [0, -1
-; 1, 0]], [2]], [0.E-57 + 1.0000000000000000000000000000000000000*I], [1, y]
-, [1, 0; 0, 1], [1, 0, 0, -1; 0, 1, 1, 0]], [x^2 + 1, -x, -1, y^2 + 1, x], [
-[x^2 + 1, [0, 1], -4, 1, [Mat([1, 0.E-77 + 1.0000000000000000000000000000000
-000000*I]), [1, 1.0000000000000000000000000000000000000; 1, -1.0000000000000
-000000000000000000000000], [1, 1; 1, -1], [2, 0; 0, -2], [2, 0; 0, 2], [1, 0
-; 0, -1], [1, [0, -1; 1, 0]], []], [0.E-77 + 1.00000000000000000000000000000
-00000000*I], [1, x], [1, 0; 0, 1], [1, 0, 0, -1; 0, 1, 1, 0]], [[1, 0; 0, -1
-], [1, 0; 0, -1], 1, Vecsmall([1, 2])]]], [Mod(y, y^2 + 1)], Mod(1, y^2 + 1)
-, Vecsmall([]), [[], Vecsmall([])], 0, [1, 0; 0, 1], [1, 0; 0, 1], [[1, 0; 0
-, 1], [0, -1; 1, 0]], 0, [2, 0]]
+[[x, [1, x], [1, 1], 1, [], [], [[1], [1]], Mat(1), 1, [y^2 + 1, [0, 1], -4,
+ 1, [Mat([1, 0.E-57 + 1.0000000000000000000000000000000000000*I]), [1, 1.000
+0000000000000000000000000000000000; 1, -1.0000000000000000000000000000000000
+000], [1, 1; 1, -1], [2, 0; 0, -2], [2, 0; 0, 2], [1, 0; 0, -1], [1, [0, -1;
+ 1, 0]], [2]], [0.E-57 + 1.0000000000000000000000000000000000000*I], [1, y],
+ [1, 0; 0, 1], [1, 0, 0, -1; 0, 1, 1, 0]], [x^2 + 1, x, 0, y^2 + 1, x], [[x^
+2 + 1, [0, 1], -4, 1, [Mat([1, 0.E-77 + 1.0000000000000000000000000000000000
+000*I]), [1, 1.0000000000000000000000000000000000000; 1, -1.0000000000000000
+000000000000000000000], [1, 1; 1, -1], [2, 0; 0, -2], [2, 0; 0, 2], [1, 0; 0
+, -1], [1, [0, -1; 1, 0]], []], [0.E-77 + 1.00000000000000000000000000000000
+00000*I], [1, x], [1, 0; 0, 1], [1, 0, 0, -1; 0, 1, 1, 0]], [[1, 0; 0, 1], [
+1, 0; 0, 1], 1, Vecsmall([1, 2])]]], [Mod(y, y^2 + 1)], Mod(1, y^2 + 1), Vec
+small([]), [[], Vecsmall([])], 0, [1, 0; 0, 1], [1, 0; 0, 1], [[1, 0; 0, 1],
+ [0, 0; 0, 0]], 0, [2, 0]]
 [y]~
 [-2*y + 1]~
 [-3, 1]~
 [-y + 1]~
-[-3, 2]~
+[-3, 0]~
 [Mod(Mod(y + 2, y^2 + 1), x)]~
-[-1/5, 7/5]~
-[-1/5, 7/5]~
+[-3, 1]~
+[-3/5, -6/5]~
 [Mod(Mod(-y, y^2 + 1), x)]~
-[1, 2]~
+[1, -2]~
 
 [Mod(Mod(y, y^2 + 1), x)]
 
 
-[ 0 1]
+[0 0]
 
-[-1 0]
+[0 0]
 
 x + Mod(2*y - 1, y^2 + 1)
-Mod(-y - 3, y^2 + 1)
-Mod(-y - 3, y^2 + 1)
+-3
+-3
 1
 1
 1
@@ -2111,15 +2111,15 @@ testing simplify: quatalg csa over Q
   *** alginit: domain error in alg_hasse: degree <= 1
 new algsimpledec
 0
-[0, [[[0, 0, 0, 0, 0, 0, Mat(1), Mat(1), [Mat(1)], 0, [1]], Mat([1, 1, 0]), 
-[0; 1; 0]], [[0, 0, 0, 0, 0, 0, Mat(1), Mat(1), [Mat(1)], 0, [1]], Mat([1, 0
-, 0]), [1; -1; -1]], [[0, 0, 0, 0, 0, 0, Mat(1), Mat(1), [Mat(1)], 0, [1]], 
-Mat([1, 0, 1]), [0; 0; 1]]]]
+[0, [[[0, 0, 0, 0, 0, 0, Mat(1), Mat(1), [Mat(1)], 0, [1]], Mat([1, 0, 1]), 
+[0; 0; 1]], [[0, 0, 0, 0, 0, 0, Mat(1), Mat(1), [Mat(1)], 0, [1]], Mat([1, 1
+, 0]), [0; 1; 0]], [[0, 0, 0, 0, 0, 0, Mat(1), Mat(1), [Mat(1)], 0, [1]], Ma
+t([1, 0, 0]), [1; -1; -1]]]]
 0
-[0, [[[0, 0, 0, 0, 0, 0, Mat(1), Mat(1), [Mat(1)], 5, [1]], Mat([1, 1, 0]), 
-[0; 1; 0]], [[0, 0, 0, 0, 0, 0, Mat(1), Mat(1), [Mat(1)], 5, [1]], Mat([1, 0
-, 1]), [0; 0; 1]], [[0, 0, 0, 0, 0, 0, Mat(1), Mat(1), [Mat(1)], 5, [1]], Ma
-t([1, 0, 0]), [1; 4; 4]]]]
+[0, [[[0, 0, 0, 0, 0, 0, Mat(1), Mat(1), [Mat(1)], 5, [1]], Mat([1, 0, 0]), 
+[1; 4; 4]], [[0, 0, 0, 0, 0, 0, Mat(1), Mat(1), [Mat(1)], 5, [1]], Mat([1, 1
+, 0]), [0; 1; 0]], [[0, 0, 0, 0, 0, 0, Mat(1), Mat(1), [Mat(1)], 5, [1]], Ma
+t([1, 0, 1]), [0; 0; 1]]]]
 [[0; 0; 1], [[[0, 0, 0, 0, 0, 0, Mat(1), Mat(1), [Mat(1)], 0, [1]], Mat([1, 
 0, 0]), [1; -1; 0]], [[0, 0, 0, 0, 0, 0, Mat(1), Mat(1), [Mat(1)], 0, [1]], 
 Mat([1, 1, 0]), [0; 1; 0]]]]
@@ -2424,4 +2424,4 @@ x^2 + Mod(-17, y)
   ***   at top-level: al2=algtensor(al,al)
   ***                     ^----------------
   *** algtensor: sorry, tensor of non-cyclic algebras is not yet implemented.
-Total time spent: 1300
+Total time spent: 1951
